optimize docs